fixed image animation on small devices

--- a/resources/style.css
+++ b/resources/style.css
@@ -197,6 +197,10 @@ body{
         left: 50%;
         transform: translateX(-50%);
     }
+
+    #phone.hidden{
+        transform: translate(-50%, 100%);
+    }
 }
 
 #aboutPopup{
